# fota

./: .gitignore  README.md  env.sh  project.cmake
components/aos_port/: CMakeLists.txt  aos_posix.c  aos_posix_timer.c  sysinfo.c
components/aos_port/include/aos/: debug.h  kernel.h  version.h
components/cjson/: CMakeLists.txt  package.yaml
components/cjson/src/: cJSON.c
components/fota/: CMakeLists.txt  README.md  package.yaml
components/fota/fota/: fota.c  fota_cop.c  fota_verify.c
components/fota/include/yoc/: fota.h
components/fota/netio/: flash.c  http.c  httpc.c
components/fota_service/: CMakeLists.txt  fotax.c
components/fota_service/dbus/: fota-introspect.c  fota-new.c  fota-server.c
components/fota_service/include/: dbus_new_helpers.h  fota.h  fota_debug.h  fota_server.h  fotax.h
components/fota_service/include/utils/: common.h  fota_buf.h  includes.h  list.h  os.h  trace.h
components/fota_service/lib/: fota_buf.c  fota_debug.c
components/httpclient/: CMakeLists.txt  build.mk  package.yaml
components/httpclient/src/: http_auth.c  http_client.c  http_header.c
components/kv/: CMakeLists.txt  kv_aos.c  kv_fct.c  kv_linux.c  kv_linux.h
components/mbedtls/: CMakeLists.txt  package.yaml
components/mbedtls/platform/yoc/: net_sockets.c
components/mbedtls/platform/yoc/include/: platform_config.h
components/transport/: CMakeLists.txt  package.yaml
components/transport/src/: tls.c  transport_ssl.c  transport_tcp.c  transport_utils.c  transport_ws.c
components/ulog/: CMakeLists.txt  ulog.c
solutions/fota-service/: CMakeLists.txt  README.md  demo.c  fota.conf  fota_pangu.conf  main.c  push.sh
solutions/fota-service/keystore/: bn_pubkey.txt  bn_pubkey2048.txt  key2048.pem  pubkey2048.pem
solutions/fota-service/libubi/: common.h  ubinfo.c
solutions/fota-service/porting/: flash.c  fota_cop.c  fota_verify.c  image.c  imagef.h
(+4 files in other folders)
